# rusty_canvas

./: Cargo.toml  README.md  index.html
.github/workflows/: pipeline.yml
src/: canvas.rs  main.rs
src/app/: canvas.rs  events.rs  mod.rs  shapes.rs  toolbar.rs  tools.rs
src/app/tools/: mod.rs  rectangle_tool.rs  select_tool.rs  shape_tool.rs
src/components/: base_button.rs  bg_color_button.rs  color_button.rs  mod.rs
src/store/: mod.rs  shapes.rs  tools.rs
src/types/: colors.rs  events.rs  ids.rs  mod.rs  shapes.rs  version.rs
src/types/tools/: erase_tool.rs  mod.rs  select_tool.rs  shape_tool.rs
src/utils/: events.rs  mod.rs
src/utils/tools/: mod.rs  select_tool.rs  shape_tool.rs
src/views/: app.rs  mod.rs  the_canvas.rs  the_sidebar.rs  the_toolbar.rs
