[package]
name = "rusty_canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
wasm-bindgen = "0.2.92"
