[package]
name = "rusty_canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
web-sys = { version = "0.3.69", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "DomRect"] }
wasm-bindgen = "0.2.92"
enum_dispatch = "0.3.13"

[profile.release]
panic = 'abort' # less code to include into binary
codegen-units = 1 # optimization over all codebase (slow)
opt-level = 'z' # optimization for size ( more aggressive )
lto = true # link time optimization using using whole-program analysis
