[package]
name = "rusty_canvas"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "DomRect"] }
wasm-bindgen = "0.2"
enum_dispatch = "0.3"
strum = "0.26"
strum_macros = "0.26"
yewdux = "0.11"
serde = "1.0"
hashbrown = "0.14"
uuid = { version = "1.18", features = ["v4", "js"]}

[profile.release]
panic = 'abort' # less code to include into binary
codegen-units = 1 # optimization over all codebase (slow)
opt-level = 'z' # optimization for size ( more aggressive )
lto = true # link time optimization using using whole-program analysis
